<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/my_top_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_25"
                android:background="@color/color_bg_yellow" />

            <RelativeLayout
                android:id="@+id/rl_my_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:background="@color/color_bg_yellow"
                android:paddingLeft="@dimen/dp_20"
                android:paddingTop="@dimen/dp_35"
                android:paddingRight="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_35">

                <com.classic.base_library.widget.CircleImageView
                    android:id="@+id/iv_my_head"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginRight="@dimen/dp_10"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/my_img_head" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/iv_my_head"
                    android:layout_toRightOf="@+id/iv_my_head"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nickname"
                            android:textColor="@color/color_ff010101"
                            android:textSize="@dimen/sp_13" />

                        <TextView
                            android:id="@+id/btn_edit_user_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:background="@color/white"
                            android:paddingLeft="@dimen/dp_6"
                            android:paddingTop="@dimen/dp_2"
                            android:paddingRight="@dimen/dp_6"
                            android:paddingBottom="@dimen/dp_2"
                            android:text="@string/edit"
                            android:textSize="@dimen/sp_10" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_user_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/user_id"
                        android:textColor="@color/color_ff747474"
                        android:textSize="@dimen/sp_10" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/img_qr_code"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_erweima" />

            </RelativeLayout>

            <com.classic.android.widget.MyItemView1
                android:id="@+id/item_my_wallet"
                style="@style/my_item_style"
                android:layout_marginTop="@dimen/dp_55"
                android:focusable="true"
                app:itemIcon="@mipmap/icon_qianbao"
                app:itemTitle="@string/my_wallet" />

            <com.classic.android.widget.MyItemView1
                android:id="@+id/item_my_trend"
                style="@style/my_item_style"
                android:layout_marginTop="@dimen/dp_10"
                app:itemIcon="@mipmap/icon_dongtai"
                app:itemInfo="@string/first_trend"
                app:itemTitle="@string/my_trend" />

            <com.classic.android.widget.MyItemView1
                android:id="@+id/item_my_comment"
                style="@style/my_item_style"
                app:itemIcon="@mipmap/icon_pinlun"
                app:itemTitle="@string/my_comment" />

            <com.classic.android.widget.MyItemView1
                android:id="@+id/item_vip"
                style="@style/my_item_style"
                android:layout_marginTop="@dimen/dp_10"
                app:itemIcon="@mipmap/icon_hyzx"
                app:itemInfo="@string/start_vip"
                app:itemTitle="@string/vip_center" />

            <com.classic.android.widget.MyItemView1
                android:id="@+id/item_settings"
                style="@style/my_item_style"
                android:layout_marginTop="@dimen/dp_10"
                app:itemIcon="@mipmap/icon_shezhi"
                app:itemTitle="@string/setting" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_125"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="horizontal"
            android:elevation="@dimen/dp_10"
            android:background="@mipmap/bg_kuang"
            android:weightSum="4">

            <include
                layout="@layout/item_my_friend"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                layout="@layout/item_my_circle"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                layout="@layout/item_my_topic"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <include
                layout="@layout/item_my_trend"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>